Poprawiona lekko formatka logowania, błąd w textboxie

--- a/HotelDlaPsow/WindowLogin.xaml
+++ b/HotelDlaPsow/WindowLogin.xaml
@@ -35,7 +35,7 @@
         <Label Grid.Column="1" Grid.Row="5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="13">
             Hasło
         </Label>
-        <TextBlock Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></TextBlock>
+        <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></TextBox>
         <PasswordBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></PasswordBox>
     </Grid>
 </Window>
