--- a/HotelDlaPsow/WindowMenu.xaml
+++ b/HotelDlaPsow/WindowMenu.xaml
@@ -5,8 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="WindowMenu" Height="450" Width="800">
+        Title="WindowMenu" Height="500" Width="400">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" HorizontalContentAlignment="Center" 
+               VerticalContentAlignment="Center" FontSize="26" FontFamily="Bahnschrift SemiBold SemiCondensed">
+            MENU
+        </Label>
+        <Label Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="3" HorizontalContentAlignment="Center" 
+               VerticalContentAlignment="Center" FontSize="17">
+            Wybierz operację
+        </Label>
+        <Button Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="10">Aktywność</Button>
+        <Button Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="10">Informacje o piesku</Button>
+        <Button Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="10">Wizyty piesków</Button>
+        <Button Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Margin="10">Lista piesków</Button>
+        <Button Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="3" Margin="10">Informacje o piesku</Button>
     </Grid>
 </Window>
