--- a/HotelDlaPsow/WindowMenu.xaml
+++ b/HotelDlaPsow/WindowMenu.xaml
@@ -38,5 +38,6 @@
         <Button Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="10">Wizyty piesków</Button>
         <Button Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Margin="10">Lista piesków</Button>
         <Button Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="3" Margin="10">Informacje o piesku</Button>
+        <Button Grid.Column="2" Grid.Row="8" Margin="10">Wyloguj</Button>
     </Grid>
 </Window>
