--- a/HotelDlaPsow/WindowVisits.xaml
+++ b/HotelDlaPsow/WindowVisits.xaml
@@ -5,8 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="WindowVisits" Height="450" Width="800">
+        Title="WindowVisits" Height="500" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Button Grid.Column="2" Grid.Row="7" Margin="11">Dodaj</Button>
+        <Button Grid.Column="3" Grid.Row="7" Margin="11">Edytuj</Button>
+        <Button Grid.Column="4" Grid.Row="7" Margin="11">Usuń</Button>
+        <DataGrid Name="dgVisits" AutoGenerateColumns="False" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID Wizyty" Width="142" Binding="{Binding idVisit}"/>
+                <DataGridTextColumn Header="Imię Pieska" Width="142" Binding="{Binding nameofDog}"/>
+                <DataGridTextColumn Header="Data przyjęcia" Width="142" Binding="{Binding beginDate}"/>
+                <DataGridTextColumn Header="Data wydania" Width="142" Binding="{Binding endDate}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
