--- a/HotelDlaPsow/WindowLogin.xaml
+++ b/HotelDlaPsow/WindowLogin.xaml
@@ -37,5 +37,6 @@
         </Label>
         <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></TextBox>
         <PasswordBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></PasswordBox>
+        <Button Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" Margin="11" Content="Zaloguj"/>
     </Grid>
 </Window>
