--- a/HotelDlaPsow/MainWindow.xaml
+++ b/HotelDlaPsow/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="100" Width="100" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+    <Grid >
 
     </Grid>
 </Window>
