--- a/HotelDlaPsow/WindowLogin.xaml
+++ b/HotelDlaPsow/WindowLogin.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="Logowanie" Height="500" Width="400">
+        Title="Logowanie" Height="500" Width="400" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -35,8 +35,8 @@
         <Label Grid.Column="1" Grid.Row="5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="13">
             Hasło
         </Label>
-        <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></TextBox>
-        <PasswordBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></PasswordBox>
-        <Button Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" Margin="11" Content="Zaloguj"/>
+        <TextBox x:Name="TextBoxLogin" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></TextBox>
+        <PasswordBox x:Name="PasswordBoxPass" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Margin="11"></PasswordBox>
+        <Button x:Name="ButtonLogin" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" Margin="11" Content="Zaloguj" Click="ButtonLogin_Click"/>
     </Grid>
 </Window>
