--- a/HotelDlaPsow/WindowMenu.xaml
+++ b/HotelDlaPsow/WindowMenu.xaml
@@ -32,9 +32,9 @@
                VerticalContentAlignment="Center" FontSize="17">
             Wybierz operację
         </Label>
-        <Button Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="10">Dzienna aktywność</Button>
-        <Button Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="10">Wizyty piesków</Button>
-        <Button Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="10">Lista piesków</Button>
+        <Button x:Name="ButtonDailyActive" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="10" Click="ButtonDailyActive_Click">Dzienna aktywność</Button>
+        <Button x:Name="ButtonVisit" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="10" Click="ButtonVisit_Click">Wizyty piesków</Button>
+        <Button x:Name="ButtonDogList" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="10" Click="ButtonDogList_Click">Lista piesków</Button>
         <Button Grid.Column="2" Grid.Row="7" Margin="10">Wyloguj</Button>
     </Grid>
 </Window>
