--- a/HotelDlaPsow/WindowDailyIActiveAdd.xaml
+++ b/HotelDlaPsow/WindowDailyIActiveAdd.xaml
@@ -36,6 +36,6 @@
         <TextBox Text="{Binding hour, StringFormat=hh:mm}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2"></TextBox>
         <RichTextBox HorizontalContentAlignment="Center" Grid.RowSpan="2" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></RichTextBox>
         <Button Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10" Click="btnAdd_Click" >Dodaj</Button>
-        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10" Click="btnAdd_Click" >Anuluj</Button>
+        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10"  >Anuluj</Button>
     </Grid>
 </Window>
