--- a/HotelDlaPsow/WindowDailyIActiveAdd.xaml
+++ b/HotelDlaPsow/WindowDailyIActiveAdd.xaml
@@ -35,7 +35,7 @@
         <DatePicker HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="3" Margin="7" Grid.ColumnSpan="2"></DatePicker>
         <TextBox Text="{Binding hour, StringFormat=hh:mm}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2"></TextBox>
         <RichTextBox HorizontalContentAlignment="Center" Grid.RowSpan="2" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></RichTextBox>
-        <Button Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10" Click="btnAdd_Click" >Dodaj</Button>
-        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10"  >Anuluj</Button>
+        <Button Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10,10,10,0" Click="btnAdd_Click" Height="28" VerticalAlignment="Top" >Dodaj</Button>
+        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10" Click="Button_Click"  >Anuluj</Button>
     </Grid>
 </Window>
