--- a/HotelDlaPsow/WindowDogAdd.xaml
+++ b/HotelDlaPsow/WindowDogAdd.xaml
@@ -81,6 +81,6 @@
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="7" Margin="7" Grid.Column="7"></TextBox>
 
         <Button Grid.Column="3" Grid.Row="8" FontSize="16" Margin="10,10,10,10" Click="btnAdd_Click" >Dodaj</Button>
-        <Button Grid.Column="5" Grid.Row="8" FontSize="16" Margin="10,10,10,10"  >Anuluj</Button>
+        <Button Grid.Column="5" Grid.Row="8" FontSize="16" Margin="10,10,10,10" Click="Button_Click"  >Anuluj</Button>
     </Grid>
 </Window>
