--- a/HotelDlaPsow/WindowVisitsAdd.xaml
+++ b/HotelDlaPsow/WindowVisitsAdd.xaml
@@ -34,6 +34,6 @@
         <DatePicker HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2"></DatePicker>
         <DatePicker HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></DatePicker>
         <Button Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10" Click="btnAdd_Click" >Dodaj</Button>
-        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10">Anuluj</Button>
+        <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10" Click="Button_Click">Anuluj</Button>
     </Grid>
 </Window>
