--- a/HotelDlaPsow/WindowDailyActive.xaml
+++ b/HotelDlaPsow/WindowDailyActive.xaml
@@ -29,7 +29,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Content="Dzienna Aktywoność" Grid.ColumnSpan="4" FontSize="30"/>
-        <Label Content="Imie:" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Content="Id Psa:" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="TextboxName" Grid.Row="1" Grid.Column="1" Margin="11"/>
         <Label Content="Data:" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <DatePicker x:Name="DatePickerDate" Grid.Row="1" Grid.Column="3" Margin="11"/>
