--- a/HotelDlaPsow/WindowDailyActive.xaml
+++ b/HotelDlaPsow/WindowDailyActive.xaml
@@ -31,10 +31,11 @@
         <Label Content="Dzienna Aktywoność" Grid.ColumnSpan="4" FontSize="30"/>
         <Label Content="Id Psa:" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="TextboxName" Grid.Row="1" Grid.Column="1" Margin="11"/>
-        <Label Content="Data:" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <DatePicker x:Name="DatePickerDate" Grid.Row="1" Grid.Column="3" Margin="11"/>
+        <Label x:Name="LabelName" Grid.Column="3"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
+        <Label Content="Data:" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <DatePicker x:Name="DatePickerDate" Grid.Row="1" Grid.Column="4" Margin="11"/>
         <Button x:Name="ButtonSearch" Grid.Column="5" Grid.Row="1" Margin="11" Content="Szukaj" Click="ButtonSearch_Click"/>
-        
+
         <DataGrid Name="dataGridDogActive"  Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5"  Grid.RowSpan="6">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Godzina" Width="1*" Binding="{Binding hourActivity}"/>
@@ -44,6 +45,6 @@
         <Button x:Name="ButtonAdd" Grid.Column="2" Grid.Row="8" Margin="11" Content="Dodaj"/>
         <Button x:Name="ButtonEdit" Grid.Column="3" Grid.Row="8" Margin="11" Content="Edytuj"/>
         <Button x:Name="ButtonDelete" Grid.Column="4" Grid.Row="8" Margin="11" Content="Usuń"/>
-        
+
     </Grid>
 </Window>
