--- a/HotelDlaPsow/WindowDailyActive.xaml
+++ b/HotelDlaPsow/WindowDailyActive.xaml
@@ -9,14 +9,13 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="47*"/>
-            <ColumnDefinition Width="20*"/>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="133*"/>
-            <ColumnDefinition Width="67*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -31,21 +30,22 @@
         </Grid.RowDefinitions>
         <Label Content="Dzienna Aktywoność" Grid.ColumnSpan="4" FontSize="30"/>
         <Label Content="Id Psa:" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Content="Piesek: " Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></Label>
         <TextBox x:Name="TextboxName" Grid.Row="1" Grid.Column="1" Margin="11"/>
-        <Label x:Name="LabelName" Grid.Column="3"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
+        <Label x:Name="LabelName" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
         <Label Content="Data:" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <DatePicker x:Name="DatePickerDate" Grid.Row="1" Grid.Column="4" Margin="11"/>
         <Button x:Name="ButtonSearch" Grid.Column="5" Grid.Row="1" Margin="11" Content="Szukaj" Click="ButtonSearch_Click"/>
 
-        <DataGrid Name="dataGridDogActive"  Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5"  Grid.RowSpan="6">
+        <DataGrid Name="dataGridDogActive"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5"  Grid.RowSpan="5">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Godzina" Width="1*" Binding="{Binding hourActivity}"/>
                 <DataGridTextColumn Header="Aktywność" Width="2*" Binding="{Binding Activity}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="ButtonAdd" Grid.Column="3" Grid.Row="8" Margin="11,11,11,11" Content="Dodaj"/>
-        <Button x:Name="ButtonEdit" Grid.Column="4" Grid.Row="8" Margin="11,11,11,11" Content="Edytuj"/>
-        <Button x:Name="ButtonDelete" Grid.Column="5" Grid.Row="8" Margin="11,11,11,11" Content="Usuń"/>
+        <Button x:Name="ButtonAdd" Grid.Column="2" Grid.Row="8" Margin="11,11,11,11" Content="Dodaj"/>
+        <Button x:Name="ButtonEdit" Grid.Column="3" Grid.Row="8" Margin="11,11,11,11" Content="Edytuj"/>
+        <Button x:Name="ButtonDelete" Grid.Column="4" Grid.Row="8" Margin="11,11,11,11" Content="Usuń"/>
 
     </Grid>
 </Window>
