--- a/HotelDlaPsow/WindowDailyActive.xaml
+++ b/HotelDlaPsow/WindowDailyActive.xaml
@@ -32,7 +32,7 @@
         <Label Content="Id Psa:" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <Label Content="Piesek: " Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></Label>
         <TextBox x:Name="TextboxName" Grid.Row="1" Grid.Column="1" Margin="11"/>
-        <Label x:Name="LabelName" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
+        <Label x:Name="LabelName" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" FontSize="16"/>
         <Label Content="Data:" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <DatePicker x:Name="DatePickerDate" Grid.Row="1" Grid.Column="4" Margin="11"/>
         <Button x:Name="ButtonSearch" Grid.Column="5" Grid.Row="1" Margin="11" Content="Szukaj" Click="ButtonSearch_Click"/>
