--- a/HotelDlaPsow/WindowMenu.xaml
+++ b/HotelDlaPsow/WindowMenu.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="WindowMenu" Height="500" Width="400">
+        Title="WindowMenu" Height="500" Width="400" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
