--- a/HotelDlaPsow/WindowVisitsAdd.xaml
+++ b/HotelDlaPsow/WindowVisitsAdd.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="WindowVisitsAdd" Height="450" Width="800">
     <Grid>
@@ -27,12 +28,14 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Content="Imię Pieska" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"></Label>
+        <Label Content="Id Pieska" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"></Label>
+        <Label Content="Status wizyty" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"></Label>
         <Label Content="Data Rozpoczęcia" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2"></Label>
         <Label Content="Data Zakończenia" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2"></Label>
-        <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="3" Margin="7" Grid.ColumnSpan="2"></TextBox>
-        <DatePicker HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2"></DatePicker>
-        <DatePicker HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></DatePicker>
+        <TextBox HorizontalContentAlignment="Center" Text="{Binding idDog}" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="2" Margin="7" Grid.ColumnSpan="2"></TextBox>
+        <TextBox HorizontalContentAlignment="Center" Text="{Binding status}" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="3" Margin="7" Grid.ColumnSpan="2"></TextBox>
+        <DatePicker x:Name="dateTimePickerRozpoczecie" HorizontalContentAlignment="Center" Text="{Binding beginDate}"  VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2" Background="White" SelectedDate="{Binding DisplayDate.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date.Date, ElementName=dateTimePickerRozpoczecie, Mode=OneWay}"></DatePicker>
+        <DatePicker x:Name="dateTimePickerZakonczenie" HorizontalContentAlignment="Center" Text="{Binding beginDate}"  VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></DatePicker>
         <Button Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10" Click="btnAdd_Click" >Dodaj</Button>
         <Button Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10" Click="Button_Click">Anuluj</Button>
     </Grid>
