--- a/HotelDlaPsow/WindowVisits.xaml
+++ b/HotelDlaPsow/WindowVisits.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelDlaPsow"
         mc:Ignorable="d"
-        Title="WindowVisits" Height="500" Width="800">
+        Title="Wizyty" Height="500" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -28,8 +28,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Button Grid.Column="2" Grid.Row="7" Margin="11" Click="Button_Click">Dodaj</Button>
-        <Button Grid.Column="3" Grid.Row="7" Margin="11">Edytuj</Button>
-        <Button Grid.Column="4" Grid.Row="7" Margin="11">Usuń</Button>
+        <Button x:Name="buttonEdit" Grid.Column="3" Grid.Row="7" Margin="11" Click="buttonEdit_Click">Edytuj</Button>
+        <Button x:Name="buttonDeletele" Grid.Column="4" Grid.Row="7" Margin="11" Click="buttonDeletele_Click">Usuń</Button>
         <DataGrid Name="dataGridVisits" AutoGenerateColumns="False" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Wizyty" Width="142" Binding="{Binding idVisit}"/>
